--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Demo JavaScript: Functions and Operators</h1>
     <p>Description - This will be primarly focused on JavaScript functions, Arrow functions, Operators and operands.<br></p>
-    <h3>See app console for results and behaviors</h3>
+    <h3 id="greetingsHeader"></h3>
+    <dev id="calculationTotal"></dev>
     <script src="./Functions/index.js"></script>
 </body>
 </html>
